--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
-
+.blockquote{
+	max-width:600px;
+	Margin:10px;
+	padding:15px;
+	border-left:8px solid and in green color;
+	background-color:#f8fffe;
+	font-weight: bold;
+}
 /* Your CSS Code here. */
